--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@minimal/material-kit-react",
-  "author": "minimals.cc",
+  "name": "aduan-fe",
+  "author": "aduan-fe",
   "licence": "MIT",
   "version": "1.2.0",
   "private": false,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3303 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -80,6 +80,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.4.1"
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.0.0",
+    "prettier": "^2.4.1",
+    "sass": "^1.43.4"
   }
 }
