--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@iconify/icons-ant-design": "^1.1.0",
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/icons-ic": "^1.1.10",
@@ -47,6 +52,7 @@
     "@mui/utils": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "apexcharts": "^3.28.3",
+    "axios": "^0.24.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.24.0",
     "faker": "^5.5.3",
